--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,7 +1,7 @@
 <ul class="list-group">
-    <li class="list-group-item">An item</li>
-    <li class="list-group-item">A second item</li>
-    <li class="list-group-item">A third item</li>
-    <li class="list-group-item">A fourth item</li>
-    <li class="list-group-item">And a fifth one</li>
+    <li routerLink="/products" class="list-group-item list-group-item-info"><h5><p><strong>Kategoriler</strong></p></h5></li>
+    <li (click)="setCurrentCategory(category)" 
+    routerLink = "/products/category/{{category.categoryId}}" 
+    *ngFor="let category of categories" 
+    [class]="getCurrentCategoryClass(category)">{{category.categoryName}}</li>
   </ul>
