--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -4,7 +4,7 @@
 <table *ngIf="dataLoaded==true" class ="table">
 
     <thead>
-        <tr>
+        <tr class="table-info">
             <th>Id</th>
             <th>Ürün adı</th>
             <th>Kategori</th>
@@ -15,7 +15,7 @@
     <tr *ngFor="let product of products">
         <td>{{product.productID}}</td>
         <td>{{product.productName}}</td>
-        <td>{{product.categoryId}}</td>
+        <td>{{product.categoryID}}</td>
         <td>{{product.unitPrice}}</td>
         <td>{{product.unitsInStock}}</td>
         
