--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,23 +1,32 @@
-<div *ngIf="dataLoaded==false" class="spinner-border text-info" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-<table *ngIf="dataLoaded==true" class ="table">
+<div *ngIf="dataLoaded == false" class="spinner-border text-info" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
 
-    <thead>
-        <tr class="table-info">
-            <th>Id</th>
-            <th>Ürün adı</th>
-            <th>Kategori</th>
-            <th>Fiyat</th>
-            <th>Stok Adeti</th>
-        </tr> 
-    </thead>
-    <tr *ngFor="let product of products">
-        <td>{{product.productID}}</td>
-        <td>{{product.productName}}</td>
-        <td>{{product.categoryID}}</td>
-        <td>{{product.unitPrice}}</td>
-        <td>{{product.unitsInStock}}</td>
-        
+<div class="mb-3">
+    <label for="filterText" class="form-labe1">Ürün Ara</label>
+    <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="ürün adını giriniz">
+  </div>
+  <div *ngIf="filterText" class="alert alert-success">
+    {{filterText}} aradınız 
+  </div>
+
+<table *ngIf="dataLoaded == true" class="table">
+  <thead>
+    <tr class="table-info">
+      <th>Id</th>
+      <th>Ürün adı</th>
+      <th>Kategori</th>
+      <th>Fiyat</th>
+      <th>Kdv'li Fiyat</th>
+      <th>Stok Adeti</th>
     </tr>
+  </thead>
+  <tr *ngFor="let product of products | filterPipe:filterText">
+    <td>{{ product.productID }}</td>
+    <td>{{ product.productName | uppercase }}</td>
+    <td>{{ product.categoryID }}</td>
+    <td>{{ product.unitPrice | currency }}</td>
+    <td>{{ product.unitPrice | vatAdded: 18 | currency }}</td>
+    <td>{{ product.unitsInStock }}</td>
+  </tr>
 </table>
