--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -3,12 +3,18 @@
 </div>
 
 <div class="mb-3">
-    <label for="filterText" class="form-labe1">Ürün Ara</label>
-    <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="ürün adını giriniz">
-  </div>
-  <div *ngIf="filterText" class="alert alert-success">
-    {{filterText}} aradınız 
-  </div>
+  <label for="filterText" class="form-labe1">Ürün Ara</label>
+  <input
+    type="text"
+    [(ngModel)]="filterText"
+    class="form-control"
+    id="filterText"
+    placeholder="ürün adını giriniz"
+  />
+</div>
+<div *ngIf="filterText" class="alert alert-success">
+  {{ filterText }} aradınız
+</div>
 
 <table *ngIf="dataLoaded == true" class="table">
   <thead>
@@ -19,14 +25,18 @@
       <th>Fiyat</th>
       <th>Kdv'li Fiyat</th>
       <th>Stok Adeti</th>
+      <th></th>
     </tr>
   </thead>
-  <tr *ngFor="let product of products | filterPipe:filterText">
-    <td>{{ product.productID }}</td>
-    <td>{{ product.productName | uppercase }}</td>
-    <td>{{ product.categoryID }}</td>
-    <td>{{ product.unitPrice | currency }}</td>
-    <td>{{ product.unitPrice | vatAdded: 18 | currency }}</td>
-    <td>{{ product.unitsInStock }}</td>
-  </tr>
+  <tbody>
+    <tr *ngFor="let product of products | filterPipe: filterText">
+      <td>{{ product.productID }}</td>
+      <td>{{ product.productName | uppercase }}</td>
+      <td>{{ product.categoryID }}</td>
+      <td>{{ product.unitPrice | currency }}</td>
+      <td>{{ product.unitPrice | vatAdded: 18 | currency }}</td>
+      <td>{{ product.unitsInStock }}</td>
+      <td><button (click)="addToCart(product)" class="btn btn-success">Sepete Ekle</button></td>
+    </tr>
+  </tbody>
 </table>
